--- a/main.html
+++ b/main.html
@@ -13,18 +13,21 @@
 	
        <h1>My Playlist</h1>
 	<div class="player_one">
-		<a href="https://www.youtube.com/watch?v=kd-6aw99DpA"  target=_blank>song 1</a><br>
-		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY " target=_blank>song 2</a><br>
-		<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y"  target=_blank>song 3</a><br>
-		<a href="https://www.youtube.com/watch?v=puKD3nkB1h4"  target=_blank>song 4</a><br>
-		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k"  target=_blank>song 5</a><br>
+	<ul>
+		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA"  target=_blank>song 1</a></li>
+		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY " target=_blank>song 2</a></li>
+		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y"  target=_blank>song 3</a></li>
+		<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4"  target=_blank>song 4</a></li>
+		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k"  target=_blank>song 5</a></li>
+	</ul>	
+			
 	</div>
-		<h3>Now Playing...</h3>
+		<h2>Now Playing...</h2>
 	<div class="player_two">
-		<video src="https://www.w3schools.com/tags/movie.mp4" controls></video><br>
-		<h1>MP3 songs</h1>
+		<video controls><source src="https://www.w3schools.com/tags/movie.mp4"></video><br>
+		<h2>MP3 songs</h2>
 		<h4>Maan Meri Jaan</h4>
-		<audio src=" https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+		<audio controls> <source src=" https://www.pagalworld.com.se/files/download/id/64630"></audio>
 		
 	</div>
 </body>
