--- a/main.html
+++ b/main.html
@@ -24,10 +24,10 @@
 	</div>
 		<h2>Now Playing...</h2>
 	<div class="player_two">
-		<video controls><source src="https://www.w3schools.com/tags/movie.mp4"></video><br>
+		<video controls><source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4"></video><br>
 		<h2>MP3 songs</h2>
 		<h4>Maan Meri Jaan</h4>
-		<audio controls> <source src=" https://www.pagalworld.com.se/files/download/id/64630"></audio>
+		<audio controls> <source src=" https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3"></audio>
 		
 	</div>
 </body>
